# depscope

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: ci.yml
src/depscope/: cli.py  cmake_file_api.py  report_html.py  sbom_cyclonedx.py  scan.py
tests/: test_smoke.py  test_smoke_fixture_minimal.py
tests/fixtures/minimal/: CMakeLists.txt
tests/fixtures/minimal/src/: hello.cpp  hello.h  main.cpp
