[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depscope"
version = "0.0.1"
description = "Build-derived SBOM and dependency graph tooling for C++/CMake projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Kenhero" }]
keywords = ["sbom", "cyclonedx", "cmake", "cpp", "supply-chain", "dependency-graph"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
depscope = "depscope.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
